fix wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -763,6 +763,7 @@ section.about {
   font-size: inherit;
   font-family: inherit;
   text-transform: inherit;
+  white-space: nowrap;
 }
 
 .the_power_of_design h3 span {
